[bdist_wheel]
universal = 1

[options]
tests_require = pytest
zip_safe = false

[aliases]
test = pytest

[flake8]
max-complexity = 10
max-line-length = 79
ignore = C812,C815,C816,C819,D202,D401,E203,W503

[matrix]
python_versions =
    3.7
    3.8
    3.9
    3.10
coverage_flags =
    cover: true
    nocover: false

[metadata]
long_description = file: readme.md
long_descritpion_content_type = text/markdown
name = cfgenvy
project_urls =
    Issue Tracker = https://github.com/pennsignals/cfgenvy/issues
url = https://github.com/pennsignals/cfgenvy

[mypy]
follow_imports = normal
ignore_missing_imports = True
